<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout android:id="@+id/fp_buttons"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:orientation="horizontal"
                  android:weightSum="1.2"
                  style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/file_picker_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/close"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/file_picker_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/new_folder"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/file_picker_export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/export"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <EditText
        android:id="@+id/file_picker_text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fp_buttons"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <ListView
        android:id="@+id/file_picker_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/file_picker_text_box"
        android:layout_alignParentTop="true"/>

</RelativeLayout>